# Nora-Server

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
Server/: app.py  initapp.py  model.py  test.py
server/: app.py  initapp.py  model.py
