[tool.poetry]
name = "Nora"
version = "0.1.0"
description = ""
authors = ["Shihan Cheng <shihan.cheng@columbia.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
flask-marshmallow = "^0.14.0"
Flask-Cors = "^3.0.10"
Flask-Migrate = "^3.1.0"
requests = "^2.26.0"
marshmallow-sqlalchemy = "^0.26.1"
psycopg2-binary = "^2.9.2"
mypy = "^0.910"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
